force-app/main/default/objects/Billing_OPD_IP__c/Billing_OPD_IP__c.object-meta.xml
<CustomObject>
    <label>Billing (OPD &amp; IP)</label>
    <nameField>
        <displayFormat>BID - {00000}</displayFormat>
        <label>Bill Id No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings (OPD &amp; IP)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>