force-app/main/default/objects/Billing_OPD_IP__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <label>Doctor Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>