force-app/main/default/objects/Billing_OPD_IP__c/fields/Room_Charges_IP__c.field-meta.xml
<CustomField>
    <fullName>Room_Charges_IP__c</fullName>
    <label>Room Charges (IP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>